--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "latest",
-    "body-parser": "latest",
+    "body-parser": "~1.4.2",
     "bower": "latest",
     "cloudinary": "^1.3.1",
     "connect-flash": "latest",
     "cookie-parser": "latest",
     "ejs": "latest",
-    "express": "latest",
+    "express": "~4.5.1",
     "express-session": "latest",
     "method-override": "latest",
-    "mongoose": "latest",
+    "mongoose" : "~3.8.0",
     "bluebird":"latest",
     "morgan": "latest",
     "multer": "latest",
