--- a/bower.json
+++ b/bower.json
@@ -16,15 +16,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular-route": "1.5",
-    "angular-material": "latest",
-    "angular": "1.5",
+    "angular-route": "1.6.1",
+    "angular-material": "1.1.1",
+    "angular": "1.6.1",
     "bootstrap-datepicker": "latest",
-    "bootstrap": "latest",
+    "bootstrap": "3.3.5",
     "font-awesome": "latest",
     "ng-file-upload": "latest",
     "slick-carousel": "latest",
-    "angular-bootstrap": "latest",
+    "angular-bootstrap": "2.1.1",
     "requirejs": "latest",
     "domReady": "requirejs-domready#^2.0.1",
     "angular-filepicker": "^1.1.4",
