--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommerce-app",
   "main": "server.js",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "engines": {
     "node": "5.1.0",
     "npm": "3.7.2"
@@ -11,37 +11,36 @@
     "postinstall": "bower install"
   },
   "dependencies": {
-    "bcrypt-nodejs": "latest",
-    "body-parser": "latest",
-    "bower": "latest",
-    "cloudinary": "latest",
-    "connect-flash": "latest",
-    "cookie-parser": "latest",
-    "ejs": "latest",
-    "express": "latest",
-    "express-session": "latest",
-    "method-override": "latest",
-    "mongoose": "4.4.15",
-    "bluebird":"latest",
-    "morgan": "latest",
-    "multer": "latest",
-    "nodemon": "latest",
-    "passport": "latest",
-    "passport-facebook": "latest",
-    "passport-google-oauth": "latest",
-    "passport-local": "latest",
-    "passport-twitter": "latest",
-    "prerender-node": "latest"
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.16.0",
+    "bower": "^1.8.0",
+    "cloudinary": "^1.6.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.5",
+    "express": "^4.14.1",
+    "express-session": "^1.15.0",
+    "method-override": "^2.3.7",
+    "mongoose": "^4.8.0",
+    "morgan": "^1.7.0",
+    "multer": "^1.3.0",
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
+    "prerender-node": "^2.7.0"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
-    "bower": "latest",
-    "grunt-concurrent": "*",
+    "grunt-concurrent": "latest",
     "grunt-contrib-connect": "^1.0.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-express": "^1.4.1",
-    "grunt-nodemon": "*",
+    "grunt-nodemon": "latest",
     "grunt-open": "^0.2.3",
     "grunt-parallel": "^0.5.1"
   }
