angular ui correction

--- a/bower.json
+++ b/bower.json
@@ -16,15 +16,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular-route": "latest",
+    "angular-route": "1.6.1",
     "angular-material": "latest",
-    "angular": "latest",
+    "angular": "1.6.1",
     "bootstrap-datepicker": "latest",
-    "bootstrap": "latest",
+    "bootstrap": "3.3.7",
     "font-awesome": "latest",
     "ng-file-upload": "latest",
     "slick-carousel": "latest",
-    "angular-bootstrap": "latest",
+    "angular-bootstrap": "2.5.0",
     "requirejs": "latest",
     "domReady": "requirejs-domready#^2.0.1",
     "angular-filepicker": "^1.1.4",
