--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "angular-elevate-zoom": "^1.0.3",
     "elevatezoom": "^2.2.3",
     "chart.js": "1.0.2",
-    "ngprogress": "^1.1.3"
+    "ngprogress": "^1.1.3",
+    "update": "^0.7.4"
   }
 }
